--- a/styles.css
+++ b/styles.css
@@ -3,24 +3,35 @@
     margin: 0;
     box-sizing: border-box;
 }
+
 body{
-    height: 100vh;
+    min-height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
    
 }
+.all-content{
+    width: 500px;
+    height: 600px;
+   
+}
 header, footer{
     padding: 5px;
-    position: absolute;
+    position: relative;
     top: 0%;
+    margin-bottom: 10px;
     background: rgb(22, 21, 21);
 }
 .footer{
-    position: absolute;
+    font-family: "Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif" ;
+    font-size: 2rem;
+    text-align: center;
+    position: relative;
     color: green;
     bottom: 0%;
     display: none;
+    
 }
 span, button{
     margin-left: 15px;
@@ -50,8 +61,8 @@ button{
 
 .memory-game{
     background: rgba(116, 116, 145, 0.8);
-    width: 360px;
-    height: 360px;
+    width: 100%;
+    height: 80%;
     margin: auto;
     display: flex;
     flex-wrap: wrap;
